53: fixed alignment of landing page link

--- a/dello-box-client/src/App.css
+++ b/dello-box-client/src/App.css
@@ -72,3 +72,7 @@ td {
 .WhiteHeaders {
   color: white;
 }
+
+.hug-right{
+  margin-left: 90%;
+}
